# 3d-pointclouds

./: .gitignore
lecture_1/: CMakeLists.txt  readme.md
lecture_1/app/: test.cpp
lecture_1/cmake/: pcl.cmake
lecture_1/include/: data_type.h  model_data.h  model_net_tool.h  pcl_viewer.h  principle_component_analysis.h  surface_normal_estimation.h  voxel_filter.h
lecture_1/src/: model_net_tool.cpp  pcl_viewer.cpp  principle_component_analysis.cpp  surface_normal_estimation.cpp  voxel_filter.cpp
lecture_1/test/: test_normal_vector.cpp  test_pca.cpp  test_read_model_data.cpp  test_voxel.cpp
lecture_2/: CMakeLists.txt  readme.md
lecture_2/app/: compare_my_to_pcl.cpp  kdtree_app.cpp  octree_app.cpp  read_data_app.cpp
lecture_2/include/: brute_force_search.h  data_type.h  kdtree.h  knn_result_set.h  octree.h  pcl_viewer.h  read_data.h
lecture_2/src/: brute_force_search.cpp  kdtree.cpp  knn_result_set.cpp  octree.cpp  pcl_viewer.cpp  read_data.cpp
lecture_3/cpp/: CMakeLists.txt  readme.md
lecture_3/cpp/include/: GMM.h  generate_data.h  kmeans.h  spectral_clustering.h  tic_toc.h  viewer.h
lecture_3/cpp/src/: GMM.cpp  generate_data.cpp  kmeans.cpp  spectral_clustering.cpp  viewer.cpp
lecture_3/cpp/test/: test_GMM.cpp  test_PDF.cpp  test_kmeans.cpp  test_spectral_clustering.cpp
lecture_3/python/: GMM.py  KMeans.py  compare_cluster.py  readme.md  spectral_cluster.py
lecture_4/: clustering.py  readme.md
lecture_5/: dataset.py  model.py  readme.md  test.py  train.py
lecture_6/: readme.md  sumary.md
lecture_6/PointRCNN/lib/: config.py
lecture_6/PointRCNN/pointnet2_lib/pointnet2/: a.cu
lecture_6/PointRCNN/pointnet2_lib/pointnet2/src/: ball_query.cpp  sampling.cpp
lecture_7/: iss.py  iss_detector.py  readme.md  summary.md  utility.py
lecture_8/: FPFH.py  readme.md  utility.py
lecture_9/: descriptor.py  detector.py  normal_distribution_transformation.py  readme.md  registration.py  utility.py
